--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack --config webpack.prod.js",
     "dev": "webpack --config webpack.dev.js",
-    "start": "webpack-dev-server --color --progress --open --config webpack.dev.js",
+    "start": "webpack serve --color --progress --open --config webpack.dev.js",
     "eslint": "eslint --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -15,14 +15,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
-  },
   "jest": {
     "setupFilesAfterEnv": [
       "<rootDir>/testConfig.js"
@@ -44,6 +36,14 @@
       "src/(.*)": "<rootDir>/src/$1",
       "\\.(css|less)$": "identity-obj-proxy"
     }
+  },
+  "dependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
@@ -79,6 +79,7 @@
     "typescript": "^4.1.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
   }
 }
